# BEJ_encoder

./: CMakeLists.txt  Doxyfile  README.md
build-tests-Desktop_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-tests-Desktop_64bit-Debug/.qtc_clangd/: compile_commands.json
docs/html/: _2home_2vortmax_2BEJ_parser_2BEJ_parser_2src_2cmd_options_8h-example.html  annotated.html  classes.html  cmd__options_8h.html  cmd__options_8h__incl.map  cmd__options_8h__incl.md5  cmd__options_8h_source.html  decode_8h.html  decode_8h__incl.map  decode_8h__incl.md5  decode_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  encode_8h.html  encode_8h__incl.map  encode_8h__incl.md5  encode_8h_source.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  menudata.js  structbej__cmd__options-members.html  structbej__cmd__options.html  structbej__dict__entry-members.html  structbej__dict__entry.html  structbej__dict__entry__coll__graph.map  structbej__dict__entry__coll__graph.md5  structbej__dict__entry__header-members.html  structbej__dict__entry__header.html  structbej__dict__entry__header__coll__graph.map  structbej__dict__entry__header__coll__graph.md5  structbej__dict__header-members.html  structbej__dict__header.html  (+18 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+33 more)
src/: bejparse_options.c  bejparse_options.h  cmd_options.c  cmd_options.h  decode.c  decode.h  encode.c  encode.h  main.c  utils.c  utils.h
tests/: CMakeLists.txt  annotation.h  bej_file.h  decode_test.cpp  encode_test.cpp  json_file.h  schema.h
tests/input_files/: example.json
(+5 files in other folders)
